--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,2 +1,16 @@
+branch-defaults:
+  master:
+    environment: null
 global:
+  application_name: my_eb_site
+  branch: null
+  default_ec2_keyname: aws-eb
+  default_platform: Python 3.4
+  default_region: us-east-1
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: eb-cli
+  repository: null
+  sc: git
+  workspace_type: Application
