--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+awscli==1.11.118
 awsebcli==3.10.3
 blessed==1.14.2
 botocore==1.5.81
@@ -14,10 +15,13 @@ Mako==1.0.6
 MarkupSafe==1.0
 pathspec==0.5.0
 psycopg2==2.7.1
+pyasn1==0.2.3
 python-dateutil==2.6.1
 pytz==2017.2
 PyYAML==3.12
 requests==2.9.1
+rsa==3.4.2
+s3transfer==0.1.10
 semantic-version==2.5.0
 six==1.10.0
 tabulate==0.7.5
