--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -12,7 +12,7 @@ packages:
 
 container_commands:
   01_migrate:
-    command: "python manage.py migrate"
+    command: "python3 manage.py migrate"
     leader_only: true
   02_collectstatic:
     command: "python manage.py collectstatic --noinput"
