added db variables

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -2,6 +2,11 @@ option_settings:
   "aws:elasticbeanstalk:application:environment":
     DJANGO_SETTINGS_MODULE: "my_eb_site.settings"
     PYTHONPATH: "$PYTHONPATH"
+    RDS_DB_NAME: "getriddb1"
+    RDS_USERNAME: "shani"
+    RDS_PASSWORD: "mydbpass5"
+    RDS_HOSTNAME: "getriddb1.cola01pks64k.us-east-1.rds.amazonaws.com"
+    RDS_PORT: "5432"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: "my_eb_site/wsgi.py"
     StaticFiles: "/static/=www/static/"
